crates/tinyone_core/tests/language/fail_compile/undefined_symbol.to
# expect_error: Undefined variable

let present = 1
print missing + present
